// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package sqlc

import (
	"github.com/jackc/pgx/v5/pgtype"
)

type Admin struct {
	ID           int32
	PasswordHash pgtype.Text
}

type Colloqium struct {
	ID              int32
	TheYear         pgtype.Int4
	Semester        pgtype.Int4
	CourseID        pgtype.Int4
	Colloq1Score    pgtype.Int4
	Colloq2Score    pgtype.Int4
	Colloq3Score    pgtype.Int4
	ExamScore       pgtype.Int4
	AdditionalScore pgtype.Int4
	TotalScore      pgtype.Int4
}

type Course struct {
	ID        int32
	GroupID   pgtype.Text
	SubjectID pgtype.Text
	TeacherID pgtype.Text
}

type CourseWork struct {
	ID       int32
	TheYear  pgtype.Int4
	Semester pgtype.Int4
	CourseID pgtype.Int4
	Score    pgtype.Int4
}

type MarksAndAbsence struct {
	ScheduleID int32
	StudentID  string
	Mark       pgtype.Int4
	Status     pgtype.Text
}

type Qrcodes struct {
	ID         int32
	Code       pgtype.Text
	ScheduleID pgtype.Int4
}

type Room struct {
	ID       string
	RoomCode pgtype.Text
}

type Schedule struct {
	ID        int32
	SubjectID pgtype.Text
	GroupID   pgtype.Text
	TeacherID pgtype.Text
	RoomID    pgtype.Text
	TheTime   pgtype.Timestamp
}

type Student struct {
	ID       string
	Semester pgtype.Int4
	GroupID  pgtype.Text
}

type Subject struct {
	ID        string
	TeacherID pgtype.Text
}

type Teacher struct {
	ID string
}

type TheGroup struct {
	ID string
}

type TheUser struct {
	ID           string
	FullName     pgtype.Text
	PasswordHash pgtype.Text
}
